--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -42,3 +42,11 @@
     height: 70% !important;
     object-fit: contain;
 }
+.store__btn{
+    background-color: #fff;
+    color: var(--primary-color);
+    font-weight: 700;
+}
+.store__btn a:hover{
+    color: var(--primary-color);
+}
