--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -75,3 +75,27 @@
     font-size: .7rem;
     font-weight: 600;
 }
+
+.sticky__header{
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    box-shadow: 3px 3px 8px -3px #ddd;
+    background-color: #fff;
+}
+
+@media only screen and (max-width: 768px) {
+    .navigation{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #000000ac;
+        z-index: 9999;
+    }
+}
