--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -87,7 +87,7 @@
     box-shadow: 3px 3px 8px -3px #ddd;
     background-color: #fff;
 }
-
+/* 
 @media only screen and (max-width: 768px) {
     .navigation{
         position: fixed;
@@ -98,4 +98,4 @@
         background: #000000ac;
         z-index: 9999;
     }
-}
+} */
