--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -87,7 +87,7 @@
     box-shadow: 3px 3px 8px -3px #ddd;
     background-color: #fff;
 }
-/* 
+
 @media only screen and (max-width: 768px) {
     .navigation{
         position: fixed;
@@ -97,5 +97,46 @@
         height: 100%;
         background: #000000ac;
         z-index: 9999;
+        display: none;
     }
-} */
+    .menu{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        background: #fff;
+        z-index: 99999;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .active__menu{
+        display: block;
+    }
+    .mobile__menu{
+        display: block;
+    }
+    .mobile__menu span i {
+        font-size: 1.1rem;
+    }
+    .logo h1{
+        font-size: 1rem;
+    }
+    .logo img{
+        width: 1rem;
+        height: 1rem;
+    }
+    .fav__icon i, .Cart__icon i{
+        font-size: 1.2rem;
+    }
+    .nav__icon span img{
+        width: 1.4rem;
+        height: 1.4rem;
+    }
+    .header{
+        width: 100%;
+        height: 60px;
+        line-height: 60px;
+    }
+}
